--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>Misr...Misr??..means Egypt</h1>
-        <img src="https://i.ibb.co/fnwgsbR/misr.jpg" alt="misr" border="0">
+        <!img src="https://i.ibb.co/fnwgsbR/misr.jpg" alt="misr" border="0">
         <h1>Sup paby, can you book my ticket to egypt?</h1>
     </body>
 </html>
