--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <h1>Misr...Misr??..means Egypt</h1>
         <!img src="https://i.ibb.co/fnwgsbR/misr.jpg" alt="misr" border="0">
         <div style="position: relative">
-            <p style="position: fixed; bottom: 0; width:100%; text-align: center"> Sup paby, can you book my ticket to egypt?
+            <p style="position: fixed; bottom: 0; width:100%; text-align: center"> Sup paby, can you book my ticket to egypt? OR
+            </p>
+        </div>
+        <div style="position: relative">
+            <p style="position: fixed; bottom: 0; width:100%; text-align: center"> baby shall we go to temple?
             </p>
         </div>
         <!h1>Sup paby, can you book my ticket to egypt?</!h1>
