--- a/index.html
+++ b/index.html
@@ -7,22 +7,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <!title>??Misr??</!title>
-        <title>Phu Sing</title>
+        <title>My Travels</title>
     </head>
     <body>
-        <!h1>Misr...Misr??..means Egypt</!h1>
-        <h1>Phu sing baby</h1>
+        <h1>Phu sing</h1>
         <!img src="https://i.ibb.co/fnwgsbR/misr.jpg" alt="misr" border="0">
-        <!div style="position: relative">
-            <!p style="position: fixed; bottom: 0; width:100%; text-align: center"> Sup paby, can you book my ticket to egypt? OR
-            </!p>
-        <!/div>
         <div style="position: relative">
-            <p style="position: fixed; bottom: 0; width:100%; text-align: center"> baby shall we go to temple?
+            <p style="position: fixed; bottom: 0; width:100%; text-align: center"> Pick a location
             </p>
         </div>
-        <!h1>Sup paby, can you book my ticket to egypt?</!h1>
     </body>
 </html>
 
