removed redundant code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <h1>Phu sing</h1>
         <div style="position: relative">
-            <p style="position: fixed; bottom: 0; width:100%; text-align: center"> Pick a location
+            <p style="position: fixed; bottom: 0; width:auto; text-align: center"> Pick a location
             </p>
         </div>
     </body>
