--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
         <title>My Travels</title>
     </head>
     <body>
+        <nav _ngcontent-alk-c46="" class="navbar">
+            <div _ngcontent-alk-c46="" class="container-fluid">
+                <nav _ngcontent-alk-c46="" class="navbar-header skew-menu">
+                    <ul _ngcontent-alk-c46="">
+                        <li _ngcontent-alk-c46="">
+                            <a _ngcontent-alk-c46="" class="navbar-brand" href="#/"> Trade Blotter</a>
+                        </li><li _ngcontent-alk-c46="">
+                            <a _ngcontent-alk-c46="" class="navbar-brand" href="#/newTrade"> New Trade</a>
+                        </li><!----><li _ngcontent-alk-c46="">
+                            <a _ngcontent-alk-c46="" class="navbar-brand" href="#/tradeList"> My View </a>
+                        </li><!----><li _ngcontent-alk-c46="">
+                            <a _ngcontent-alk-c46="" class="navbar-brand" href="#/internal"> Internal </a>
+                        </li><!----><!----><!----><!----><!----><!---->
+                    </ul>
+                </nav>
+            </div>
+        </nav>        
         <h1>Phu sing</h1>
         <div style="position: relative">
             <p style="position: fixed; bottom: 0; width:100%; text-align: center"> Pick a location
