--- a/index.html
+++ b/index.html
@@ -15,14 +15,8 @@
                 <nav _ngcontent-alk-c46="" class="navbar-header skew-menu">
                     <ul _ngcontent-alk-c46="">
                         <li _ngcontent-alk-c46="">
-                            <a _ngcontent-alk-c46="" class="navbar-brand" href="#/"> Trade Blotter</a>
-                        </li><li _ngcontent-alk-c46="">
-                            <a _ngcontent-alk-c46="" class="navbar-brand" href="#/newTrade"> New Trade</a>
-                        </li><!----><li _ngcontent-alk-c46="">
-                            <a _ngcontent-alk-c46="" class="navbar-brand" href="#/tradeList"> My View </a>
-                        </li><!----><li _ngcontent-alk-c46="">
-                            <a _ngcontent-alk-c46="" class="navbar-brand" href="#/internal"> Internal </a>
-                        </li><!----><!----><!----><!----><!----><!---->
+                            <a _ngcontent-alk-c46="" class="navbar-brand" href="#/"> Discover</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
