--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </div>
         </nav>        
         <h1>Phu sing</h1>
-        <div style="position: relative">
+        <!--><div style="position: relative">
             <p style="position: fixed; bottom: 0; width:100%; text-align: center"> Pick a location
             </p>
-        </div>
+        </div><!-->
     </body>
 </html>
 
