--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>My Travels</title>
+        <title>Nomad's land</title>
     </head>
     <body>
         <nav _ngcontent-alk-c46="" class="navbar">
@@ -21,7 +21,7 @@
                 </nav>
             </div>
         </nav>        
-        <h1>Phu sing</h1>
+        <h1>phu sing</h1>
         <!--><div style="position: relative">
             <p style="position: fixed; bottom: 0; width:100%; text-align: center"> Pick a location
             </p>
